--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ proto-plus==1.26.1
 protobuf==5.29.5
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
+PyAudio==0.2.14
 pydantic==2.11.5
 pydantic_core==2.33.2
 pyparsing==3.2.3
@@ -37,6 +38,7 @@ requests==2.32.4
 requests-oauthlib==2.0.0
 rsa==4.9.1
 sniffio==1.3.1
+SpeechRecognition==3.14.3
 starlette==0.46.2
 tqdm==4.67.1
 typing-inspection==0.4.1
