--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ anyio==4.9.0
 cachetools==5.5.2
 certifi==2025.4.26
 charset-normalizer==3.4.2
-click==8.2.1
+click==8.1.8
 distro==1.9.0
 fastapi==0.115.12
 google-ai-generativelanguage==0.6.15
@@ -16,6 +16,7 @@ google-generativeai==0.8.5
 googleapis-common-protos==1.70.0
 grpcio==1.73.0
 grpcio-status==1.71.0
+gTTS==2.5.4
 h11==0.16.0
 httpcore==1.0.9
 httplib2==0.22.0
@@ -31,6 +32,7 @@ pyasn1_modules==0.4.2
 PyAudio==0.2.14
 pydantic==2.11.5
 pydantic_core==2.33.2
+pygame==2.6.1
 pyparsing==3.2.3
 python-dotenv==1.1.0
 python-multipart==0.0.20
