--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ certifi==2025.4.26
 charset-normalizer==3.4.2
 click==8.1.8
 distro==1.9.0
+dnspython==2.7.0
 fastapi==0.115.12
 google-ai-generativelanguage==0.6.15
 google-api-core==2.25.0
@@ -23,6 +24,7 @@ httplib2==0.22.0
 httpx==0.28.1
 idna==3.10
 jiter==0.10.0
+motor==3.7.1
 oauthlib==3.2.2
 openai==1.86.0
 proto-plus==1.26.1
@@ -33,6 +35,7 @@ PyAudio==0.2.14
 pydantic==2.11.5
 pydantic_core==2.33.2
 pygame==2.6.1
+pymongo==4.13.1
 pyparsing==3.2.3
 python-dotenv==1.1.0
 python-multipart==0.0.20
