--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,4 @@ GEMINI_API_KEY=your_gemini_api_key
 APP_ENV=production
 FRONTEND_ORIGIN=https://yourfrontenddomain.com
 
+INTERNAL_API_KEY=my-secret-internal-key
