--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,4 @@ APP_ENV=production
 FRONTEND_ORIGIN=https://yourfrontenddomain.com
 
 INTERNAL_API_KEY=my-secret-internal-key
+BASE_URL=http://localhost:8000
