--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ anyio==4.9.0
 APScheduler==3.11.0
 Authlib==1.6.0
 cachetools==5.5.2
-certifi==2025.4.26
+certifi==2025.6.15
 cffi==1.17.1
 charset-normalizer==3.4.2
 click==8.1.8
@@ -15,43 +15,58 @@ distro==1.9.0
 dnspython==2.7.0
 dynaconf==3.2.11
 ecdsa==0.19.1
-fastapi==0.95.2
+email_validator==2.2.0
+fastapi==0.115.13
 fastapi-authlib==0.0.4
+fastapi-cli==0.0.7
 fastapi-sa==0.1.0
-google-ai-generativelanguage==0.6.15
-google-api-core==2.25.0
-google-api-python-client==2.172.0
+google-ai-generativelanguage==0.6.1
+google-api-core==2.25.1
+google-api-python-client==2.174.0
 google-auth==2.40.3
 google-auth-httplib2==0.2.0
 google-auth-oauthlib==1.2.2
-google-generativeai==0.8.5
+google-generativeai==0.5.0
 googleapis-common-protos==1.70.0
 greenlet==3.2.3
-grpcio==1.73.0
-grpcio-status==1.71.0
+grpcio==1.73.1
+grpcio-status==1.62.3
 gTTS==2.5.4
 h11==0.14.0
 httpcore==0.17.3
 httplib2==0.22.0
+httptools==0.6.4
 httpx==0.24.1
 idna==3.10
 inflection==0.5.1
 itsdangerous==2.2.0
+Jinja2==3.1.6
 jiter==0.10.0
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain-core==0.3.66
+langsmith==0.4.2
 Mako==1.3.10
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+mdurl==0.1.2
 motor==3.7.1
 oauthlib==3.2.2
 openai==1.86.0
+orjson==3.10.18
+packaging==24.2
 proto-plus==1.26.1
-protobuf==5.29.5
+protobuf==4.25.8
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 PyAudio==0.2.14
 pycparser==2.22
-pydantic==1.10.22
+pydantic==2.11.7
+pydantic-extra-types==2.10.5
+pydantic-settings==2.10.1
 pydantic_core==2.33.2
 pygame==2.6.1
+Pygments==2.19.2
 PyJWT==2.10.1
 pymongo==4.13.1
 PyMySQL==1.1.1
@@ -62,19 +77,31 @@ python-jose==3.5.0
 python-multipart==0.0.20
 pyttsx3==2.98
 pytz==2025.2
+PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.4
 requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
+rich==14.0.0
+rich-toolkit==0.14.7
 rsa==4.9.1
+shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
 SpeechRecognition==3.14.3
 SQLAlchemy==1.4.46
-starlette==0.27.0
+starlette==0.46.2
+tenacity==9.1.2
 tqdm==4.67.1
+typer==0.16.0
 typing-inspection==0.4.1
 typing_extensions==4.14.0
 tzlocal==5.3.1
+ujson==5.10.0
 uritemplate==4.2.0
-urllib3==2.4.0
+urllib3==2.5.0
 uvicorn==0.21.1
+uvloop==0.21.0
+watchfiles==1.1.0
+websockets==15.0.1
+zstandard==0.23.0
