--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,8 @@ fastapi==0.115.13
 fastapi-authlib==0.0.4
 fastapi-cli==0.0.7
 fastapi-sa==0.1.0
-google-ai-generativelanguage==0.6.1
+filetype==1.2.0
+google-ai-generativelanguage==0.6.18
 google-api-core==2.25.1
 google-api-python-client==2.174.0
 google-auth==2.40.3
@@ -44,7 +45,10 @@ Jinja2==3.1.6
 jiter==0.10.0
 jsonpatch==1.33
 jsonpointer==3.0.0
+langchain==0.3.26
 langchain-core==0.3.66
+langchain-google-genai==2.1.5
+langchain-text-splitters==0.3.8
 langsmith==0.4.2
 Mako==1.3.10
 markdown-it-py==3.0.0
